envoy-headers-body-transformation/lua-filter/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9000

node:
  cluster: service_greeter
  id: test-id

static_resources:
  secrets:
    - name: mediation_ca_cert
      validation_context:
        trusted_ca:
          filename: /certs/ca.crt
  listeners:
    - name: http_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      per_connection_buffer_limit_bytes: 40000000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/transform"
                          route:
                            timeout: 100000s
                            cluster: ballerina-backend-service
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: transform.lua
                        - match:
                            prefix: "/multipart"
                          route:
                            timeout: 100000s
                            cluster: ballerina-backend-service
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: multipart.lua
                        - match:
                            prefix: "/chunk"
                          route:
                            timeout: 100000s
                            cluster: ballerina-backend-service
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              name: chunk.lua
                        - match:
                            prefix: "/skip-lua"
                          route:
                            timeout: 100000s
                            cluster: ballerina-backend-service
                          typed_per_filter_config:
                            envoy.filters.http.lua:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                              disabled: true
                        - match:
                            prefix: "/"
                          route:
                            timeout: 100000s
                            cluster: ballerina-backend-service
                  internal_only_headers:
                    - isadmin
                http_filters:
                  - name: envoy.filters.http.lua.mediation
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |
                        function envoy_on_request(request_handle)
                          request_handle:logInfo("Global Lua: Hello")
                        end

                        function envoy_on_response(response_handle)
                          response_handle:logInfo("Global Lua: Bye")
                        end
                      source_codes:
                        transform.lua:
                          filename: /etc/lua/transform.lua
                        multipart.lua:
                          filename: /etc/lua/multipart.lua
                        chunk.lua:
                          filename: /etc/lua/chunk.lua

                  - name: envoy.filters.http.router

  clusters:
    - name: service_httpbin
      connect_timeout: 200s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 80
    - name: mediation_service
      connect_timeout: 200s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: mediation_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mediation-service
                      port_value: 9090
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: mediation-service-host
          common_tls_context:
            validation_context_sds_secret_config:
              name: mediation_ca_cert
    - name: ballerina-backend-service
      connect_timeout: 200s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: ballerina-backend-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.8.132
                      port_value: 9080
    - name: ballerina-backend-lua
      connect_timeout: 200s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: ballerina-backend-lua
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.8.132
                      port_value: 9091
    - name: ballerina-backend-without
      connect_timeout: 200s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: ballerina-backend-without
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.8.132
                      port_value: 9092
